--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 matplotlib==3.9.0
 numpy==2.0.0
-PyVISA==1.14.1
-openpyxl
-black
+pyvisa-py==0.7.2
+openpyxl==3.1.5
+black==25.1.0
+zeroconf==0.145.0
+psutil==7.0.0
